# readmaster_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  schema.sql
alembic/: env.py
alembic/versions/: 0f01c071ef73_add_system_configurations_table.py  153d146a2a10_add_assigned_by_parent_id_to_assessments.py  beec79da1f61_create_initial_tables.py
doc/: readmaster_ai.md  swagger.yaml
src/readmaster_ai/: main.py
src/readmaster_ai/application/dto/: __init__.py  assessment_dto.py  assessment_dtos.py  assessment_list_dto.py  class_dtos.py  notification_dtos.py  progress_dtos.py  quiz_question_dtos.py  reading_dtos.py  student_dto.py  system_config_dtos.py  user_dtos.py
src/readmaster_ai/application/interfaces/: __init__.py  ai_analysis_interface.py  file_storage_interface.py
src/readmaster_ai/application/services/: __init__.py  auth_service.py
src/readmaster_ai/application/use_cases/: __init__.py  assessment_use_cases.py  class_use_cases.py  create_assessment_use_case.py  list_student_assignments_use_case.py  notification_use_cases.py  parent_use_cases.py  progress_use_cases.py  quiz_question_use_cases.py  reading_use_cases.py  user_use_cases.py  (+2 more)
src/readmaster_ai/core/: __init__.py  celery_app.py  celery_config.py  config.py
tests/: conftest.py
tests/application/use_cases/: test_assessment_use_cases.py  test_class_use_cases.py  test_notification_use_cases.py  test_parent_use_cases.py  test_quiz_question_use_cases.py  test_reading_use_cases.py  test_system_config_use_cases.py  test_teacher_use_cases.py  test_user_use_cases.py
(+93 files in other folders)
