[project]
name = "readmaster_ai"
version = "0.1.0"
description = "Readmaster.ai backend service"
authors = [
    {name = "AI Agent", email = "ai@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn[standard]>=0.34.3,<0.35.0",
    "SQLAlchemy[asyncpg]>=2.0.41,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "pydantic[email]>=2.11.5,<3.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "redis>=6.2.0,<7.0.0",
    "celery>=5.5.3,<6.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "asyncpg>=0.30.0,<0.31.0",
    "babel>=2.17.0,<3.0.0",
    "bcrypt (==4.0.1)",
]

[tool.poetry] # Keep poetry specific configurations here
packages = [
    { include = "readmaster_ai", from = "src" }
]
# No dependencies here anymore

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.0,<9.0.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
flake8 = ">=7.2.0,<8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
